feat(T325): add persisted support conversation history